plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.laba3'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-liquibase'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
    implementation 'io.vavr:vavr:1.0.1'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'
//    Enable them, after starting to work on Auth
//    implementation 'org.springframework.boot:spring-boot-starter-security'
//    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
//    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
//    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
    runtimeOnly 'org.postgresql:postgresql'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-liquibase-test'
//    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:postgresql:1.21.4'
    testImplementation 'org.assertj:assertj-core'
    testImplementation 'io.rest-assured:rest-assured:6.0.0'
    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.withType(Test).configureEach {
    jvmArgs("-XX:+EnableDynamicAgentLoading")
}

tasks.named('test') {
    useJUnitPlatform()
}
